import org.cyclonedx.Version

plugins {
    id 'java'
    id 'distribution'
    id 'org.springframework.boot' version '4.0.4'
    id 'io.spring.dependency-management' version '1.1.7'
    id 'org.graalvm.buildtools.native' version '0.11.5'
    id 'org.cyclonedx.bom' version '3.2.2'
}

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(25)
        vendor = JvmVendorSpec.of("GRAALVM_COMMUNITY")
    }
}

repositories {
    mavenCentral()
}

ext {
    set('arconiaVersion', "0.23.1")
    set('picocliVersion', "4.7.7")
    set('jlineVersion', "3.30.9")
}

dependencies {
    implementation "org.springframework.boot:spring-boot-starter"

    implementation "info.picocli:picocli:${picocliVersion}"
    annotationProcessor "info.picocli:picocli-codegen:${picocliVersion}"

    implementation "org.jline:jline-terminal-ffm:${jlineVersion}"

    testImplementation "org.springframework.boot:spring-boot-starter-test"
    testImplementation "io.arconia:arconia-spring-boot-starter:${arconiaVersion}"
    testRuntimeOnly "org.junit.platform:junit-platform-launcher"
}

springBoot {
    buildInfo()
}

tasks.withType(JavaCompile).configureEach {
    options.compilerArgs += ["-Aproject=${project.group}/${project.name}"]
}

graalvmNative {
    metadataRepository {
        version = "0.3.34"
    }
    binaries {
        main {
            imageName = "arconia"
            // See: https://jline.org/versions/4.0/docs/modules/terminal-providers#ffm-provider
            buildArgs.add('--enable-native-access=ALL-UNNAMED')
        }
    }
}

tasks.withType(JavaExec).configureEach {
   // See: https://jline.org/versions/4.0/docs/modules/terminal-providers#ffm-provider
   jvmArgs += ["--enable-native-access=ALL-UNNAMED"]
}

tasks.withType(Test).configureEach {
   // See: https://jline.org/versions/4.0/docs/modules/terminal-providers#ffm-provider
   jvmArgs += ["--enable-native-access=ALL-UNNAMED"]
}

tasks.named('test') {
    useJUnitPlatform()
}

cyclonedxDirectBom {
    includeConfigs = ["runtimeClasspath"]
    projectType = "application"
    schemaVersion = Version.VERSION_16
}

distributions {
    main {
        contents {
            from("$buildDir/native/nativeCompile") {
                into 'bin'
                include 'arconia', 'arconia.exe'
                filePermissions {
                    user {
                        read = true
                        execute = true
                    }
                    group {
                        read = true
                        execute = true
                    }
                    other {
                        read = true
                        execute = true
                    }
                }
            }
            from("$buildDir/reports/cyclonedx") {
                include 'application.cdx.json'
                rename { 'sbom.cdx.json' }
            }
            from(rootDir) {
                include 'LICENSE', 'README.md'
            }
        }
    }
}

tasks.named('distZip') {
    dependsOn('cyclonedxBom')
    def archiveName = gradle.startParameter.projectProperties['archiveName'] ?: "arconia-${project.version}.zip"
    onlyIf {
        gradle.startParameter.taskNames.contains("distZip")
    }
    archiveFileName = "${archiveName}"
}

tasks.named('distTar') {
    enabled = false
}
